Fix: Spacing cards give section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -965,7 +965,7 @@ h1 {
   .cards {
     padding: 3%;
     margin: 3%;
-    height: 200vh;
+    height: 210vh;
 
     &__button {
       border-radius: 50%;
